force-app/main/default/objects/BPMN_Connection__c/BPMN_Connection__c.object-meta.xml
<!--
================================================================================
  OBJECT: BPMN_Connection__c
  DESCRIPTION: Sequence flows connecting BPMN elements in a process
  
  AUTHOR: Dennis van Musschenbroek (DvM) - Cobra CRM B.V.
  CREATED: 2024-12-12
  VERSION: 1.0.0
  API VERSION: 62.0
  
  EXPLANATION:
  ============
  This object stores the connections (sequence flows) between BPMN elements.
  Each connection links a source element to a target element, creating the
  directional flow of the process.
  
  Key features:
  - Source/Target lookups to BPMN_Element__c
  - Labels for decision paths (Yes/No, Approved/Rejected)
  - Conditions for gateway logic
  - Default flow marking for exclusive gateways
  
  CONNECTION TYPES:
  =================
  - Sequence Flow: Normal process flow (solid arrow)
  - Conditional Flow: Flow with a condition (diamond + arrow)
  - Default Flow: Default path from gateway (slash + arrow)
  - Message Flow: Communication between pools (dashed arrow)
  - Association: Links artifacts to elements (dotted line)
  
  RELATIONSHIPS:
  ==============
  - Process__c (Master-Detail) - Parent process
  - Source_Element__c (Lookup to BPMN_Element__c)
  - Target_Element__c (Lookup to BPMN_Element__c)
  
-->
<CustomObject>
    <description>Sequence flows (connections) between BPMN elements in a process diagram. Defines the flow direction, conditions, and labels for process paths.</description>
    <label>BPMN Connection</label>
    <nameField>
        <displayFormat>CONN-{00000}</displayFormat>
        <label>Connection Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BPMN Connections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>