force-app/main/default/objects/BPMN_Connection__c/fields/Condition__c.field-meta.xml
<CustomField>
    <fullName>Condition__c</fullName>
    <description>The condition expression for gateway decision paths. Describes when this path should be taken in business terms.</description>
    <inlineHelpText>For gateway paths: describe the condition (e.g., "Amount > $1000", "Customer is VIP").</inlineHelpText>
    <label>Condition</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>