force-app/main/default/objects/BPMN_Connection__c/fields/Connection_Id__c.field-meta.xml
<CustomField>
    <fullName>Connection_Id__c</fullName>
    <description>Unique identifier used to link this Salesforce record to the corresponding connection in the Canvas_JSON.</description>
    <externalId>true</externalId>
    <inlineHelpText>System field - unique ID matching the canvas connection.</inlineHelpText>
    <label>Connection ID</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>