force-app/main/default/objects/BPMN_Connection__c/fields/Connection_Type__c.field-meta.xml
<CustomField>
    <fullName>Connection_Type__c</fullName>
    <description>The type of BPMN connection. Determines visual rendering and semantic meaning.</description>
    <inlineHelpText>Select the type of connection.</inlineHelpText>
    <label>Connection Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SequenceFlow</fullName>
                <default>true</default>
                <label>Sequence Flow</label>
            </value>
            <value>
                <fullName>ConditionalFlow</fullName>
                <label>Conditional Flow</label>
            </value>
            <value>
                <fullName>DefaultFlow</fullName>
                <label>Default Flow</label>
            </value>
            <value>
                <fullName>MessageFlow</fullName>
                <label>Message Flow</label>
            </value>
            <value>
                <fullName>Association</fullName>
            </value>
            <value>
                <fullName>DataAssociation</fullName>
                <label>Data Association</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>