force-app/main/default/objects/BPMN_Connection__c/fields/Is_Default__c.field-meta.xml
<CustomField>
    <fullName>Is_Default__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates this is the default path from an exclusive gateway. The default flow is taken when no other conditions are met.</description>
    <inlineHelpText>Check if this is the default path when no other conditions are met.</inlineHelpText>
    <label>Is Default Flow</label>
    <type>Checkbox</type>
</CustomField>