force-app/main/default/objects/BPMN_Connection__c/fields/Label__c.field-meta.xml
<CustomField>
    <fullName>Label__c</fullName>
    <description>Display label shown on the connection arrow. Commonly used for decision paths (Yes, No, Approved, Rejected).</description>
    <inlineHelpText>Label to display on this connection (e.g., "Yes", "No", "Approved").</inlineHelpText>
    <label>Label</label>
    <length>100</length>
    <type>Text</type>
</CustomField>