force-app/main/default/objects/BPMN_Connection__c/fields/Process__c.field-meta.xml
<CustomField>
    <fullName>Process__c</fullName>
    <description>The parent process this connection belongs to. Deleting the process cascades to delete all connections.</description>
    <label>Process</label>
    <referenceTo>Process__c</referenceTo>
    <relationshipLabel>BPMN Connections</relationshipLabel>
    <relationshipName>BPMN_Connections</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>