force-app/main/default/objects/BPMN_Connection__c/fields/Source_Element__c.field-meta.xml
<CustomField>
    <fullName>Source_Element__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The BPMN element where this connection originates (the "from" element).</description>
    <inlineHelpText>The starting element of this connection.</inlineHelpText>
    <label>Source Element</label>
    <referenceTo>BPMN_Element__c</referenceTo>
    <relationshipLabel>Outgoing Connections</relationshipLabel>
    <relationshipName>Outgoing_Connections</relationshipName>
    <type>Lookup</type>
</CustomField>