force-app/main/default/objects/BPMN_Connection__c/fields/Target_Element__c.field-meta.xml
<CustomField>
    <fullName>Target_Element__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The BPMN element where this connection terminates (the "to" element).</description>
    <inlineHelpText>The ending element of this connection.</inlineHelpText>
    <label>Target Element</label>
    <referenceTo>BPMN_Element__c</referenceTo>
    <relationshipLabel>Incoming Connections</relationshipLabel>
    <relationshipName>Incoming_Connections</relationshipName>
    <type>Lookup</type>
</CustomField>